--- a/蓝山作业2号/谭同学录取通知.html
+++ b/蓝山作业2号/谭同学录取通知.html
@@ -10,7 +10,9 @@
   <body>
     <div class="flex">
       <!-- <div class="blankbox"></div> -->
-      <div class="titlebox"><h3>不止步于[南山]，让世界看到你的可能性</h3></div>
+      <div class="titlebox">
+        <h3>不止步于[南山]，让世界看到你的可能性</h3>
+      </div>
       <!-- <div class="blankbox"></div> -->
     </div>
     <div class="body">
@@ -25,8 +27,11 @@
           >欢迎加入蓝山工作室</strong
         >
         <br />
-        ---------------------------------------------------------
-        <br />
+      </div>
+      <br />
+    </div>
+    <div class="wenzibottom">
+      <div class="wenzidown">
         恭喜你成功通过<span class="blue">[蓝山工作室-前端开发部]</span
         >的面试，成为前端开发部的新成员
         <br />
@@ -41,16 +46,15 @@
         <div class="numimg">
           <div class="numingbox">511432260</div>
         </div>
-        <span class="xiaoxi"
-          >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;进群验证消息填你的[姓名-学院-学号]</span
-        >
+        <span class="xiaoxi">进群验证消息填你的[姓名-学院-学号]</span>
       </div>
     </div>
-    <br />
-    <br />
+
     <div class="down">
-      该邮件被发送到1259859975@qq.com
-      <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;由谭博文接收
+      <p>
+        该邮件被发送到1259859975@qq.com
+        <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;由谭博文接收
+      </p>
     </div>
     <div class="greydown">
       <div class="greydown_box">
