--- a/蓝山js/数组降维/数组降维.html
+++ b/蓝山js/数组降维/数组降维.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="blank.css" />
+    <script src="数组降维.js"></script>
   </head>
-  <body>
-    <div>2019-9-9</div>
-    <div></div>
-    <script src="blank.js"></script>
-  </body>
+  <body></body>
 </html>
