--- a/回调地狱/回调地狱.html
+++ b/回调地狱/回调地狱.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="blank.css" />
+    <link rel="stylesheet" href="回调地狱.css" />
   </head>
   <body>
-    <div>2019-9-9</div>
-    <div></div>
-    <script src="blank.js"></script>
+    <div class="r"></div>
+    <div class="g"></div>
+    <div class="b"></div>
+    <script src="回调地狱.js"></script>
   </body>
 </html>
