--- a/渐变/渐变.html
+++ b/渐变/渐变.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="渐变.css" />
+
+    <style></style>
   </head>
   <body>
     <div></div>
