--- a/跟随鼠标的波奇/boqi.html
+++ b/跟随鼠标的波奇/boqi.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="blank.css" />
+    <link rel="stylesheet" href="boqi.css" />
   </head>
   <body>
-    <div>2019-9-9</div>
-    <div></div>
-    <script src="blank.js"></script>
+    <img src="boqi.webp" alt="" />
+    <script src="boqi.js"></script>
   </body>
 </html>
