--- a/蓝山js/123/123.html
+++ b/蓝山js/123/123.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="myMap.js"></script>
+    <script src="123.js"></script>
   </body>
 </html>
