--- a/startText/index.html
+++ b/startText/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv=“Content-Security-Policy” content=“upgrade-insecure-requests”/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>知乎 - 有问题，就会有答案</title>
-  <link rel="shortcut icon" href="../img/zhihu.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="img/zhihu.ico" type="image/x-icon">
   <!-- 初始化 -->
-  <link rel="stylesheet" href="../css/base.css">
+  <link rel="stylesheet" href="./css/base.css">
   <!-- login自身css -->
-  <link rel="stylesheet" href="../css/login.css">
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
   <div class="body">
@@ -90,31 +91,31 @@
         </div>
         <div class="statement">
           未注册手机验证后自动登录，注册即代表同意
-          <a href="https://www.zhihu.com/term/zhihu-terms">《知乎协议》</a>
-          <a href="https://www.zhihu.com/term/privacy">《隐私保护指引》</a>
+          <a href="https://zhihu.madeindz.work/">《知乎协议》</a>
+          <a href="https://zhihu.madeindz.work/">《隐私保护指引》</a>
         </div>
       </div>
     </div>
     <footer>
       <div>
-        <a href="https://zhuanlan.zhihu.com/">知乎专栏</a><a href="https://www.zhihu.com/roundtable">圆桌</a><a href="https://www.zhihu.com/explore">发现</a><a href="https://www.zhihu.com/app/">移动应用</a><a href="https://www.zhihu.com/contact">联系我们</a><a href="https://app.mokahr.com/apply/zhihu/78336#/">来知乎工作</a><a href="https://www.zhihu.com/org/signup">注册机构号</a><a href="https://ir.zhihu.com/">Investor Relations</a>
+        <a href="https://zhihu.madeindz.work/">知乎专栏</a><a href="https://zhihu.madeindz.work/">圆桌</a><a href="https://zhihu.madeindz.work/">发现</a><a href="https://zhihu.madeindz.work/">移动应用</a><a href="https://zhihu.madeindz.work/">联系我们</a><a href="https://zhihu.madeindz.work/">来知乎工作</a><a href="https://zhihu.madeindz.work/">注册机构号</a><a href="https://zhihu.madeindz.work/">Investor Relations</a>
       </div>
       <div>
         <span>
           © 
         </span>
-        <a href="https://tsm.miit.gov.cn/dxxzsp/">京 ICP 证 110745 号</a><a href="https://beian.miit.gov.cn/">京 ICP 备 13052560 号 - 1</a><a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802020088"><img src="https://pic3.zhimg.com/80/v2-d0289dc0a46fc5b15b3363ffa78cf6c7.png" alt=""> 京 ICP 备 13052560 号 - 1</a><a href="https://www.zhihu.com/certificates">京网文[2022]2674-081 号</a><a href="https://pic4.zhimg.com/v2-69619662ff377c3741d92bb6fd46b7ca.png">出版物经营许可证</a><a href="https://pic3.zhimg.com/v2-c280f8bce57f9b045b83185384d86027.png">药品医疗器械网络信息服务备案（京）网药械信息备字（2022）第00334号</a>
+        <a href="https://zhihu.madeindz.work/">京 ICP 证 xxxxxxx</a><a href="https://zhihu.madeindz.work/">京 ICP 备 xxxxxxxx 号 - 1</a><a href="https://zhihu.madeindz.work/"> 京 ICP 备 xxxxxxx 号 - 1</a><a href="https://zhihu.madeindz.work/">京网文[2022]xxxxxx 号</a><a href="https://zhihu.madeindz.work/">出版物经营许可证</a><a href="https://zhihu.madeindz.work/">xxxxxxxxxxx备案（京）xxx信息备字（2022）第xxxx号</a>
       </div>
       <div>
-        <a href="https://zhuanlan.zhihu.com/p/28852607">侵权举报</a><a href="https://www.12377.cn/">网上有害信息举报专区</a><a href="https://www.zhihu.com/term/child-jubao">儿童色情信息举报专区</a><a href="https://www.zhihu.com/term/algorithm-recommend-report">互联网算法推荐举报专区</a>
+        <a href="https://zhihu.madeindz.work/">侵权举报</a><a href="https://zhihu.madeindz.work/">网上有害信息举报专区</a><a href="https://zhihu.madeindz.work/">儿童色情信息举报专区</a><a href="https://zhihu.madeindz.work/">互联网算法推荐举报专区</a>
         <span>违法和不良信息举报：010-82716601</span>
-        <a href="mailto:jubao@zhihu.com">举报邮箱：jubao@zhihu.com</a>
+        <a href="https://zhihu.madeindz.work/">举报邮箱：xxxx@zhihu.com</a>
       </div>
       <div>
         <img src="https://pica.zhimg.com/80/v2-ccdb7828c12afff31a27e51593d23260_720w.png" alt="本站提供适老化无障碍服务">
       </div>
     </footer>
-    <script src="../js/login.js"></script>
+    <script src="./js/index.js"></script>
   </div>
 </body>
 </html>
