add头像功能前

--- a/blank.html
+++ b/blank.html
@@ -6,10 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="blank.css" />
+    <style>
+      span{
+        color: red;
+      }
+    </style>
   </head>
   <body>
-    <div>2019-9-9</div>
-    <div></div>
+    <button>点我一下</button>
+    <ul>
+      <li><a href="javascript:;">1</a></li>
+      <li><a href="javascript:;">2</a></li>
+      <li><a href="javascript:;">3</a></li>
+      <li></li>
+    </ul>
     <script src="blank.js"></script>
   </body>
 </html>
