--- a/startText/html/myIndex.html
+++ b/startText/html/myIndex.html
@@ -14,6 +14,11 @@
 <body>
   <!-- 头部导航栏模块 -->
   <div class="head">
+    <div class="searchul">
+      <div>搜索历史</div>
+      <ul></ul>
+      <ol></ol>
+    </div>
     <div class="headerinner">
       <div class="headback"></div>
       <div class="headtiwen">
@@ -97,23 +102,67 @@
                 <span>退出</span>
               </a>
         </div>
-        <img src="https://picx.zhimg.com/v2-0650c78c73617d02d984b81864ab9182_l.jpg?source=32738c0c" alt="头像">
+        <img class="commonimg" src="https://pic1.zhimg.com/v2-abed1a8c04700ba7d72b45195223e0ff_l.jpg?source=1940ef5c" alt="头像">
       </div>
+    </div>
+    <div class="headerinnerBottom">
+      <div>
+        <a href="https://zhihu.madeindz.work/html/home.html">
+          <svg viewBox="0 0 64 30" fill="#056DE8" width="64" height="30" class="css-1hlrcxk"><path d="M29.05 4.582H16.733V25.94h3.018l.403 2.572 4.081-2.572h4.815V4.582zm-5.207 18.69l-2.396 1.509-.235-1.508h-1.724V7.233h6.78v16.04h-2.425zM14.46 14.191H9.982c0-.471.033-.954.039-1.458v-5.5h5.106V5.935a1.352 1.352 0 0 0-.404-.957 1.378 1.378 0 0 0-.968-.396H5.783c.028-.088.056-.177.084-.255.274-.82 1.153-3.326 1.153-3.326a4.262 4.262 0 0 0-2.413.698c-.57.4-.912.682-1.371 1.946-.532 1.453-.997 2.856-1.31 3.693C1.444 8.674.28 11.025.28 11.025a5.85 5.85 0 0 0 2.52-.61c1.119-.593 1.679-1.502 2.054-2.883l.09-.3h2.334v5.5c0 .5-.045.982-.073 1.46h-4.12c-.71 0-1.39.278-1.893.775a2.638 2.638 0 0 0-.783 1.874h6.527a17.717 17.717 0 0 1-.778 3.649 16.796 16.796 0 0 1-3.012 5.273A33.104 33.104 0 0 1 0 28.74s3.13 1.175 5.425-.954c1.388-1.292 2.631-3.814 3.23-5.727a28.09 28.09 0 0 0 1.12-5.229h5.967v-1.37a1.254 1.254 0 0 0-.373-.899 1.279 1.279 0 0 0-.909-.37z"></path><path d="M11.27 19.675l-2.312 1.491 5.038 7.458a6.905 6.905 0 0 0 .672-2.218 3.15 3.15 0 0 0-.28-2.168l-3.118-4.563zM51.449 15.195V5.842c4.181-.205 7.988-.405 9.438-.483l.851-.05c.387-.399.885-2.395.689-3.021-.073-.25-.213-.666-.638-.555a33.279 33.279 0 0 1-4.277.727c-2.766.321-3.97.404-7.804.682-6.718.487-12.709.72-12.709.72a2.518 2.518 0 0 0 .788 1.834 2.567 2.567 0 0 0 1.883.706c2.278-.095 5.598-.25 8.996-.41v9.203h-12.78c0 .703.281 1.377.783 1.874a2.69 2.69 0 0 0 1.892.777h10.105v7.075c0 .887-.464 1.192-1.231 1.214h-3.92a4.15 4.15 0 0 0 .837 1.544 4.2 4.2 0 0 0 1.403 1.067 6.215 6.215 0 0 0 2.71.277c1.36-.066 2.967-.826 2.967-3.57v-7.607h11.28c.342 0 .67-.135.91-.374.242-.239.378-.563.378-.902v-1.375H51.449z"></path><path d="M42.614 8.873a2.304 2.304 0 0 0-1.508-.926 2.334 2.334 0 0 0-1.727.405l-.376.272 4.255 5.85 2.24-1.62-2.884-3.98zM57.35 8.68l-3.125 4.097 2.24 1.663 4.517-5.927-.375-.277a2.32 2.32 0 0 0-1.722-.452 2.327 2.327 0 0 0-1.536.896z"></path></svg>
+        </a>
+        <ul>
+          <li><a href="javascript:;">关注</a></li>
+          <li><a href="javascript:;">推荐</a></li>
+          <li><a href="javascript:;">热榜</a></li>
+          <li><a href="javascript:;">视频</a></li>
+        </ul>
+      </div>
+      <div>
+        <div class="search">
+          <input type="text" id="headBottomsearch" placeholder="搜索">
+            <button>
+              <svg width="18" height="18" viewBox="0 0 24 24" class="Zi Zi--Search SearchBar-searchIcon css-1mo564z" fill="currentColor"><g fill-rule="evenodd" clip-rule="evenodd"><path d="M11.5 18.389c3.875 0 7-3.118 7-6.945 0-3.826-3.125-6.944-7-6.944s-7 3.118-7 6.944 3.125 6.945 7 6.945Zm0 1.5c4.694 0 8.5-3.78 8.5-8.445C20 6.781 16.194 3 11.5 3S3 6.78 3 11.444c0 4.664 3.806 8.445 8.5 8.445Z"></path><path d="M16.47 16.97a.75.75 0 0 1 1.06 0l3.5 3.5a.75.75 0 1 1-1.06 1.06l-3.5-3.5a.75.75 0 0 1 0-1.06Z"></path></g></svg>
+            </button>
+        </div>
+        <button class="headBottomtiwen">提问</button>
+      </div>
+    </div>
+  </div>
+  <!-- 隐藏收藏模块 -->
+  <div class="myIndexblack"></div>
+  <div class="hiddenshoucang">
+    <div class="hiddenshoucangTitle">创建收藏夹</div>
+    <div class="hiddenshoucangForm">
+      <form>
+        <div>
+          <input type="text" placeholder="收藏标题" id="hiddenshoucangTitle">
+        </div>
+        <div>
+          <textarea name="" id="hiddenshoucangMessage" cols="30" rows="4" placeholder="收藏描述(可选)"></textarea>
+        </div>
+        <div>
+          <input type="radio" name="ev" id="hiddenpubulic" checked="cheked">公开
+        </div>
+        <div>
+          <input type="radio" id="hiddenprivate" name="ev">私密
+        </div>
+        <div>
+          <button>取消</button><button>确认</button>
+        </div>
+      </form>
     </div>
   </div>
   <div class="myIndexBody">
     <div class="myIndexTop">
       <div class="myIndeximg">
-        <img src="https://picx.zhimg.com/v2-0650c78c73617d02d984b81864ab9182_l.jpg?source=32738c0c" alt="头像">
+        <img class="myIndexImg" src="https://pic1.zhimg.com/v2-abed1a8c04700ba7d72b45195223e0ff_l.jpg?source=1940ef5c" alt="头像">
       </div>
       <ul>
         <li></li>
         <li>
           <div>
             <div class="myIndexUsername"></div>
-            <div class="myIndexMessage">
-              <svg width="24" height="24" viewBox="0 0 24 24" class="Zi Zi--Male" fill="#949eb1"><path fill-rule="evenodd" d="M13.88 4.395a.75.75 0 0 1 .75-.75h4.97a.75.75 0 0 1 .75.75v4.982a.75.75 0 1 1-1.5 0V6.211l-3.968 3.968a6.375 6.375 0 1 1-1.06-1.06l3.973-3.974H14.63a.75.75 0 0 1-.75-.75ZM9.876 9.25a4.875 4.875 0 1 0 0 9.75 4.875 4.875 0 0 0 0-9.75Z" clip-rule="evenodd"></path></svg>
-            </div>
+            <div class="myIndexMessage"></div>
             <div class="myIndexxiala">
               <button>
                 <div>
@@ -178,7 +227,7 @@
           </ul>
         </div>
         <div class="myIndexBottomLeftshoucang">
-          <div><a href="javascript:;">我的收藏</a></div>
+          <div><a href="javascript:;">我的收藏</a> <a href="javascript:;" class="createshoucang">新建收藏夹</a></div>
           <ul>
           </ul>
         </div>
@@ -235,61 +284,64 @@
           </ul>
         </div>
         <!-- 尾部模块 -->
-        <footer>
-          <a href="javascript:;">谭博文</a>
-          <a href="javascript:;">知乎指南</a>
-          <a href="javascript:;">知乎协议</a>
-          <a href="javascript:;">知乎隐私保护指引</a>
-          <br>
-          <a href="javascript:;">应用</a>
-          <a href="javascript:;">工作</a>
-          <a href="javascript:;">申请开通知乎机构号</a>
-          <br>
-          <a href="javascript:;">侵权举报</a>
-          <a href="javascript:;">网上有害信息举报专区</a>
-          <br>
-          <a href="javascript:;">京 xxx 证 xxxxxx 号</a>
-          <br>
-          <a href="javascript:;">京 xxx 备 xxxxxx 号 - 1</a>
-          <br>
-          <a href="javascript:;">京xxx 备 xxxxxxxxxxx 号</a>
-          <br>
-          <a href="javascript:;">京xx[2022]xxxx-xxx 号</a>
-          <br>
-          <a href="javascript:;">xxxxxxxxxxxx备案</a>
-          <br>
-          <a href="javascript:;">（京）xxx信息备字（2022）第xxxxx号</a>
-          <br>
-          <span>服务热线：xxx-xxx-xxxx</span>
-          <br>
-          <span>违法和不良信息举报：xxx-xxxxxxxx</span>
-          <br>
-          <a href="javascript:;">举报邮箱：lanshan@qq.com</a>
-          <br>
-          <a href="javascript:;">儿童色情信息举报专区</a>
-          <br>
-          <a href="javascript:;">互联网算法推荐举报专区</a>
-          <br>
-          <a href="javascript:;">养老诈骗举报专区</a>
-          <br>
-          <a href="javascript:;">MCN 举报专区</a>
-          <br>
-          <a href="javascript:;">信息安全漏洞反馈专区</a>
-          <br>
-          <a href="javascript:;">内容从业人员违法违规行为举报</a>
-          <br>
-          <a href="javascript:;">网络谣言信息举报入口</a>
-          <br>
-          <a href="javascript:;">证照中心</a>
-          <a href="javascript:;">Investor Relations</a>
-          <br>
-          <a href="javascript:;">联系我们</a>
-          <span> © 2023 知乎</span>
-          <br>
-          <span>xxx有限公司版权所有</span>
-          <br>
-          <img src="https://pica.zhimg.com/80/v2-ccdb7828c12afff31a27e51593d23260_720w.png" alt="本站提供适老化无障碍服务" width="80" height="38">
-        </footer>
+      <footer>
+        <a href="javascript:;">谭博文</a>
+        <a href="javascript:;">知乎指南</a>
+        <a href="javascript:;">知乎协议</a>
+        <a href="javascript:;">知乎隐私保护指引</a>
+        <br>
+        <a href="javascript:;">应用</a>
+        <a href="javascript:;">工作</a>
+        <a href="javascript:;">申请开通知乎机构号</a>
+        <br>
+        <a href="javascript:;">侵权举报</a>
+        <a href="javascript:;">网上有害信息举报专区</a>
+        <br>
+        <a href="javascript:;">京 xxx 证 xxxxxx 号</a>
+        <br>
+        <a href="javascript:;">京 xxx 备 xxxxxx 号 - 1</a>
+        <br>
+        <a href="javascript:;">京xxx 备 xxxxxxxxxxx 号</a>
+        <br>
+        <a href="javascript:;">京xx[2022]xxxx-xxx 号</a>
+        <br>
+        <a href="javascript:;">xxxxxxxxxxxx备案</a>
+        <br>
+        <a href="javascript:;">（京）xxx信息备字（2022）第xxxxx号</a>
+        <br>
+        <span>服务热线：xxx-xxx-xxxx</span>
+        <br>
+        <span>违法和不良信息举报：xxx-xxxxxxxx</span>
+        <br>
+        <a href="javascript:;">举报邮箱：lanshan@qq.com</a>
+        <br>
+        <a href="javascript:;">儿童色情信息举报专区</a>
+        <br>
+        <a href="javascript:;">互联网算法推荐举报专区</a>
+        <br>
+        <a href="javascript:;">养老诈骗举报专区</a>
+        <br>
+        <a href="javascript:;">MCN 举报专区</a>
+        <br>
+        <a href="javascript:;">信息安全漏洞反馈专区</a>
+        <br>
+        <a href="javascript:;">内容从业人员违法违规行为举报</a>
+        <br>
+        <a href="javascript:;">网络谣言信息举报入口</a>
+        <br>
+        <a href="javascript:;">证照中心</a>
+        <a href="javascript:;">Investor Relations</a>
+        <br>
+        <a href="javascript:;">联系我们</a>
+        <span> © 2023 知乎</span>
+        <br>
+        <span>xxx有限公司版权所有</span>
+        <br>
+        <img src="https://pica.zhimg.com/80/v2-ccdb7828c12afff31a27e51593d23260_720w.png" alt="本站提供适老化无障碍服务" width="80" height="38">
+        <button class="returnTop">
+          <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true" class="Zi Zi--BackToTop" fill="#8590a6"><path fill-rule="evenodd" d="M13.204 3.107a1.75 1.75 0 0 0-2.408 0L3.806 9.73c-1.148 1.088-.378 3.02 1.204 3.02h2.24V20c0 .966.784 1.75 1.75 1.75h6A1.75 1.75 0 0 0 16.75 20v-7.25h2.24c1.582 0 2.353-1.932 1.204-3.02l-6.99-6.623Z" clip-rule="evenodd"></path></svg>
+        </button>
+      </footer>
       </div>
     </div>
   </div>
