--- a/startText/html/myResource.html
+++ b/startText/html/myResource.html
@@ -132,7 +132,7 @@
       <input type="file" id="myResourceimg">
       <div>上传图片</div>
       <div>
-      <img src="https://picx.zhimg.com/v2-0650c78c73617d02d984b81864ab9182_l.jpg?source=32738c0c" alt="">
+      <img src="https://pic1.zhimg.com/v2-abed1a8c04700ba7d72b45195223e0ff_l.jpg?source=1940ef5c" alt="">
       </div>
     </div>
     <div class="myResourceBodyBotton">
